fix: Ajustes de layout e correções de overflow revisado!

--- a/resources/assets/concurso/src/app/pages/registration/registration.component.scss
+++ b/resources/assets/concurso/src/app/pages/registration/registration.component.scss
@@ -3,7 +3,7 @@
 }
 .root{
     width: 100%;
-    height: 100vh;
+    height: 130vh;
     background-color: var(---color-primary);
 }
 .setTitle{
